--- a/.lando.yml
+++ b/.lando.yml
@@ -5,3 +5,6 @@ config:
   site: drupal-10-serg
   id: 434ea382-1379-483a-8c34-ce8d71c0d78e
   drush: ^10
+tooling:
+  drush:
+    service: appserver
